# noria-sms

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/noria_messaging/: __init__.py  exceptions.py
src/noria_messaging/channels/sms/: __init__.py  models.py  service.py
src/noria_messaging/channels/sms/gateways/: __init__.py  base.py  onfon.py
src/noria_messaging/channels/whatsapp/: __init__.py  models.py  service.py
src/noria_messaging/channels/whatsapp/gateways/: __init__.py  base.py  meta.py
src/noria_sms/: __init__.py  client.py  exceptions.py  http.py  models.py  types.py
src/noria_sms/gateways/: __init__.py  base.py  onfon.py
tests/: test_coverage_completion.py  test_distribution_identity.py  test_noria_messaging.py  test_noria_sms.py
