[project]
name = "noria-sms"
version = "0.1.0"
description = "Reusable Python SMS SDK with pluggable gateway integrations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Noria Labs" }]
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["noria_sms*"]

[tool.setuptools.package-data]
noria_sms = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
package = true
