[project]
name = "noria-messaging"
version = "0.1.1"
description = "Async-first Python SDK for SMS and WhatsApp messaging with Onfon and Meta Cloud API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Noria Labs" }]
license = "MIT"
keywords = ["sms", "whatsapp", "messaging", "onfon", "meta", "httpx", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/thekiharani/noria-messaging"
Repository = "https://github.com/thekiharani/noria-messaging"
Issues = "https://github.com/thekiharani/noria-messaging/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["noria_messaging*"]

[tool.setuptools.package-data]
noria_messaging = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
package = true
